update: projeto completo

--- a/notebooks/analise.ipynb
+++ b/notebooks/analise.ipynb
@@ -2283,7 +2283,8 @@
     "**Recomendações**\n",
     "- Investigar causas mecânicas e humanas por trás do alto número de falhas nas máquinas Id 036 e 102. E em caso de orçamento livre, substituir a Id 036. \n",
     "- Investigar a operação dos caminhões, e revisar suas manutenções.\n",
-    "- Revisar e fiscalizar as manutenções das carregadeiras. "
+    "- Revisar e fiscalizar as manutenções das carregadeiras. \n",
+    "- Incluir no registro de acidentes o Id do operador para identificação e monitoramento dos operadores."
    ]
   }
  ],
